--- a/pom.xml
+++ b/pom.xml
@@ -109,4 +109,11 @@
 		</pluginManagement>
 	</build>
 
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-oss-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 </project>
