--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,10 @@
 	</build>
 
 	<distributionManagement>
+		<repository>
+			<id>sonatype-oss-releases</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
 		<snapshotRepository>
 			<id>sonatype-oss-snapshots</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
