--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
 	</organization>
 
 	<inceptionYear>2019</inceptionYear>
+	
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+		</license>
+	</licenses>
 
 	<build>
 		<pluginManagement>
