--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
 			<name>Apache License, Version 2.0</name>
 		</license>
 	</licenses>
+	
+	<scm>
+		<url>https://github.com/dataliquid/parent-oss/tree/master</url>
+	</scm>
 
 	<build>
 		<pluginManagement>
