--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,18 @@
 			<name>Apache License, Version 2.0</name>
 		</license>
 	</licenses>
-	
+
 	<scm>
 		<url>https://github.com/dataliquid/parent-oss/tree/master</url>
 	</scm>
+
+	<developers>
+		<developer>
+			<name>GitHub Developer Team</name>
+			<organization>dataliquid GmbH</organization>
+			<organizationUrl>www.dataliquid.com</organizationUrl>
+		</developer>
+	</developers>
 
 	<build>
 		<pluginManagement>
