--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,10 @@ jobs:
         cache: maven
     
     - name: Build with Maven
-      run: mvn -B clean verify -Dgpg.skip=true --file pom.xml
+      run: mvn -B clean verify -Dgpg.skip=true
     
     - name: Run tests
-      run: mvn -B test -Dgpg.skip=true --file pom.xml
+      run: mvn -B test -Dgpg.skip=true
     
     - name: Generate test report
       uses: dorny/test-reporter@v1
@@ -53,11 +53,11 @@ jobs:
         cache: maven
     
     - name: Run SpotBugs
-      run: mvn -B spotbugs:check -Dgpg.skip=true --file pom.xml
+      run: mvn -B spotbugs:check -Dgpg.skip=true
       continue-on-error: true
     
     - name: Run Checkstyle
-      run: mvn -B checkstyle:check -Dgpg.skip=true --file pom.xml
+      run: mvn -B checkstyle:check -Dgpg.skip=true
       continue-on-error: true
     
     - name: Analyze with SonarCloud
