Fix test reporter to not fail when no tests exist
- Added fail-on-empty: false to test reporter configuration
- Prevents CI failure when project has no test files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         name: Maven Tests - Java ${{ matrix.java }}
         path: '**/surefire-reports/TEST-*.xml'
         reporter: java-junit
+        fail-on-empty: false
 
   code-quality:
     runs-on: ubuntu-latest
