--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.dataliquid</groupId>
 	<artifactId>parent-oss</artifactId>
@@ -132,18 +134,18 @@
 						<useSnapshotInRelease>true</useSnapshotInRelease>
 						<useSnapshotInHotfix>true</useSnapshotInHotfix>
 						<gitFlowConfig>
-								<productionBranch>master</productionBranch>
-								<developmentBranch>develop</developmentBranch>
-								<featureBranchPrefix>feature/</featureBranchPrefix>
-								<releaseBranchPrefix>release/</releaseBranchPrefix>
-								<hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
-								<supportBranchPrefix>support/</supportBranchPrefix>
-								<versionTagPrefix></versionTagPrefix>
-								<origin>origin</origin>
+							<productionBranch>master</productionBranch>
+							<developmentBranch>develop</developmentBranch>
+							<featureBranchPrefix>feature/</featureBranchPrefix>
+							<releaseBranchPrefix>release/</releaseBranchPrefix>
+							<hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
+							<supportBranchPrefix>support/</supportBranchPrefix>
+							<versionTagPrefix></versionTagPrefix>
+							<origin>origin</origin>
 						</gitFlowConfig>
 						<commitMessages>
-								<hotfixFinishMessage>Update version to @{version}</hotfixFinishMessage>
-								<releaseFinishMessage>Update version to @{version}</releaseFinishMessage>
+							<hotfixFinishMessage>Update version to @{version}</hotfixFinishMessage>
+							<releaseFinishMessage>Update version to @{version}</releaseFinishMessage>
 						</commitMessages>
 					</configuration>
 				</plugin>
@@ -156,6 +158,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
 					<version>3.3.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.central</groupId>
+					<artifactId>central-publishing-maven-plugin</artifactId>
+					<version>0.7.0</version>
+
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -203,18 +211,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<extensions>true</extensions>
+				<configuration>
+					<publishingServerId>sonatype-oss-central</publishingServerId>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
-	<distributionManagement>
-		<repository>
-			<id>sonatype-oss-releases</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-		<snapshotRepository>
-			<id>sonatype-oss-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 </project>
