--- a/pom.xml
+++ b/pom.xml
@@ -227,9 +227,20 @@
 			<plugin>
 				<groupId>net.revelc.code.formatter</groupId>
 				<artifactId>formatter-maven-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>com.dataliquid.guidelines</groupId>
+						<artifactId>coding-conventions</artifactId>
+						<version>1.0.0</version>
+					</dependency>
+				</dependencies>
 				<configuration>
+					<configFile>codestyles/default/java-formatter.xml</configFile>
 					<encoding>UTF-8</encoding>
 					<lineEnding>LF</lineEnding>
+					<compilerSource>${maven.compiler.source}</compilerSource>
+					<compilerCompliance>${maven.compiler.source}</compilerCompliance>
+					<compilerTargetPlatform>${maven.compiler.target}</compilerTargetPlatform>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -237,6 +248,11 @@
 	<profiles>
 		<profile>
 			<id>format-code</id>
+			<activation>
+				<property>
+					<name>!env.CI</name>
+				</property>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
@@ -258,6 +274,12 @@
 		
 		<profile>
 			<id>format-code-validation</id>
+			<activation>
+				<property>
+					<name>env.CI</name>
+					<value>true</value>
+				</property>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
