--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.dataliquid</groupId>
 	<artifactId>parent-oss</artifactId>
-	<version>2.3.0-SNAPSHOT</version>
+	<version>2.2.1</version>
 	<packaging>pom</packaging>
 	<name>dataliquid :: Open Source Software - Maven Parent</name>
 	<description>Maven Parent - Open Source Software</description>
