--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,11 @@
 					<artifactId>formatter-maven-plugin</artifactId>
 					<version>2.27.0</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-pmd-plugin</artifactId>
+					<version>3.25.0</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -296,6 +301,43 @@
 								<phase>validate</phase>
 								<goals>
 									<goal>validate</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
+		<profile>
+			<id>qa</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-pmd-plugin</artifactId>
+						<configuration>
+							<targetJdk>${maven.compiler.target}</targetJdk>
+							<failOnViolation>true</failOnViolation>
+							<rulesets>
+								<ruleset>/category/java/bestpractices.xml</ruleset>
+								<ruleset>/category/java/errorprone.xml</ruleset>
+								<ruleset>/category/java/multithreading.xml</ruleset>
+								<ruleset>/category/java/performance.xml</ruleset>
+								<ruleset>/category/java/security.xml</ruleset>
+							</rulesets>
+							<verbose>true</verbose>
+							<printFailingErrors>true</printFailingErrors>
+						</configuration>
+						<executions>
+							<execution>
+								<id>pmd-check</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>check</goal>
 								</goals>
 							</execution>
 						</executions>
