#31 Change QA profile activation to use skipQA property instead of activeByDefault

--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,9 @@
 		<profile>
 			<id>qa</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>!skipQA</name>
+				</property>
 			</activation>
 			<build>
 				<plugins>
