Exclude build directory from PMD analysis
Add excludeRoots configuration to PMD plugin to exclude the entire build directory from PMD analysis. This prevents false positives from auto-generated code, compiled classes, and other build artifacts.

--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,9 @@
 							</rulesets>
 							<verbose>true</verbose>
 							<printFailingErrors>true</printFailingErrors>
+							<excludeRoots>
+								<excludeRoot>${project.build.directory}</excludeRoot>
+							</excludeRoots>
 						</configuration>
 						<executions>
 							<execution>
